2000-06-02  Gene Z. Ragan  <gzr@eazel.com>

	More work in progress on the capplet.  Still incomplete.

	* mime-type-capplet/edit-window.c: 
	(initialize_main_win),
	(populate_application_menu):
	The Application window now displays the shortlist and selected
	the default application if it is present in the short list.

	(add_application):
	All of the mchinery is hooked up, but the API does not seem to 
	be registering the new choice.
	
2000-06-02  Gene Z. Ragan  <gzr@eazel.com>

	More work in progress on the capplet.  Still incomplete.
	
	* mime-type-capplet/edit-window.c: (initialize_main_win_vals),
	(show_edit_window), (populate_application_menu),
	(populate_component_menu), (application_menu_activate),
	(add_application), (show_file_selector):
	Work in progress.
	
	* mime-type-capplet/mime-data.c: (add_to_key):
	Work in progress.

2000-06-02  John Sullivan  <sullivan@eazel.com>

	* data/mime/gnome-vfs.keys:
	* data/mime/gnome-vfs.mime:
	Added application/x-gnumeric at andersca's suggestion.

2000-06-02  Darin Adler  <darin@eazel.com>

	* libgnomevfs/gnome-vfs-utils.c:
	* libgnomevfs/gnome-vfs-utils.h:
	* test/test-escape.c: (main):
	Updated escape and test to not escape "+" except if explicitly
	asked. This makes the path escape function more useful for the
	real case of converting a path to a URI.
	
	* test/.cvsignore: Ignore test-mime-handlers-set.

2000-06-02  Ramiro Estrugo  <ramiro@eazel.com>

	* libgnomevfs/gnome-vfs-mime-handlers.c: (get_user_level):
	Use a GConfEngine directly to avoid depending on the Gtk object
	system.
	
2000-06-01  Maciej Stachowiak  <mjs@eazel.com>

	* data/mime/gnome-vfs.keys: Define short-list components for
	text/plain

	First half of task 370 (write APIs for mime handler stuff)
	
	* libgnomevfs/gnome-vfs-mime-handlers.h,
	libgnomevfs/gnome-vfs-mime-handlers.c:
	(gnome_vfs_mime_set_default_action_type,
	gnome_vfs_mime_set_default_application,
	gnome_vfs_mime_set_default_component,
	gnome_vfs_mime_set_short_list_applications,