@@ -1,3 +1,14 @@
+2000-06-02  John Sullivan  <sullivan@eazel.com>
+
+	* libgnomevfs/gnome-vfs-mime-handlers.h,
+	* libgnomevfs/gnome-vfs-mime-handlers.c:
+	(gnome_vfs_mime_add_application_to_short_list),
+	(gnome_vfs_mime_remove_application_from_short_list),
+	(gnome_vfs_mime_add_component_to_short_list),
+	(gnome_vfs_mime_remove_component_from_short_list):
+	Added prototypes and empty bodies for these new
+	convenience functions. Implementations coming soon.
+
 2000-06-02  Gene Z. Ragan  <gzr@eazel.com>
 
 	More work in progress on the capplet.  Still incomplete.
